--- a/Proyecto 3/Hospital/src/main/webapp/css/stylesheet.css
+++ b/Proyecto 3/Hospital/src/main/webapp/css/stylesheet.css
@@ -7,3 +7,57 @@ and open the template in the editor.
     Created on : Nov 1, 2019, 11:33:02 PM
     Author     : zofia
 */
+.log-in {
+    max-width: 50%;
+    border-color: #b2ced6;
+    margin-top: 50px;
+    margin-left: 325px;
+}
+
+footer {
+    background-color: #7FA9C1; 
+    padding-top: 2vh;
+}
+
+.copyright
+{
+  text-align: center;
+}
+
+.logo
+{
+  height: 5vh;
+}
+
+.logotype {
+    width: 12%;
+    margin-top: 25px;
+    margin-left: 295px;
+}
+
+#inputUsername, #inputPassword {
+    width: 50%;
+    margin-left: 160px;
+}
+
+.btn-light {
+    color: whitesmoke;
+    background-color: #16516D;
+    border-color: #16516D;
+}
+
+.btn-sign {
+    margin-left: 160px;
+    margin-bottom: 25px;
+    width: 50%;
+}
+
+@media (max-width: 768px) 
+{
+  li
+  {
+    margin-left: 0;
+    margin-bottom: 1vh;
+  }
+  
+}
